--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,3 +17,5 @@ jobs:
         go-version: 1.16.x
     - name: Test
       run: go test -v ./... -race -coverprofile=coverage.out -covermode=atomic
+    - name: Upload coverage to Codecov
+      run: bash <(curl -s https://codecov.io/bash
