--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,4 +18,4 @@ jobs:
     - name: Test
       run: go test -v ./... -race -coverprofile=coverage.out -covermode=atomic
     - name: Upload coverage to Codecov
-      run: bash <(curl -s https://codecov.io/bash
+      run: bash <(curl -s https://codecov.io/bash)
